- Added timing code to KeePass converter - Changed to use JDK11 Optional.isEmpty as it reads better, in XmlSpliterator - Formatting changes in CircularBuffer & it's test - Removed dependency on FluentIterator, and switched to JDK stream and labdas instead - Updated code level to Java 11 (POM) - General formatting and cleanup