@@ -1,25 +1,22 @@
 package org.g5.util.xml.stream;
 
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertThat;
-
-import java.io.File;
-import java.io.StringReader;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-
-import javax.xml.transform.stream.StreamSource;
-
-import org.g5.util.xml.stream.XmlSpliterator;
+import com.google.common.base.Function;
+import com.google.common.collect.Iterators;
+import com.google.common.collect.Lists;
 import org.jdom2.Element;
 import org.junit.Test;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.Iterators;
-import com.google.common.collect.Lists;
+import javax.xml.transform.stream.StreamSource;
+import java.io.File;
+import java.io.StringReader;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
+
+import static org.g5.util.Streams.sequential;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThat;
 
 /**
  * 
@@ -44,21 +41,52 @@ public class XmlSpliteratorTest {
     @Test
     public void shouldPlayWellWithGuavaFunctors() throws Exception {
         File sourceFile = new File(getClass().getResource("/xml-spliterator.xml").getFile());
+        //1. test counting an iterable
         XmlSpliterator xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "child");
         int size = Iterators.size(xmlSpliterator);
         assertThat(size, is(4));
-        
+
+        //2. test building a list from an iterable, then extract element-text from the list
         xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "subchild");
-        List<Element> matches = Lists.newArrayList((Iterator<Element>)xmlSpliterator);
+        List<Element> matches = Lists.newArrayList((Iterator<Element>) xmlSpliterator);
         assertThat(matches.size(), is(4));
-        List<String> valueList = FluentIterable.from(matches).transform(new ElementTextExtractor()).toList();
+        List<String> valueList = matches.stream().map(new ElementTextExtractor()).collect(Collectors.toList());
         assertThat(valueList, containsInAnyOrder("abc", "def", "ghi", "klm"));
-        
+
+        //3. test extracting element-text from the iterable directly
         xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "subchild");
-        valueList = FluentIterable.from(xmlSpliterator).transform(new ElementTextExtractor()).toList();
+        valueList = toXmlContentList(xmlSpliterator);
         assertThat(valueList, containsInAnyOrder("abc", "def", "ghi", "klm"));
     }
-    
+
+    //Java8 functors seem to perform _less_ efficiently than the Guava ones. For this
+    //test sample (fairly small), there is a 100ms penalty (i5 dual-core HT, 30ms on an i7 quad-core HT)
+    //using Java-8 functors compared to Guava.
+    //Need to do some more testing against larger data-sets, but it does seem like a better
+    //idea to use Guava for these types of transformations
+    @Test
+    public void shouldPlayWellWithJava8Functors() throws Exception {
+        File sourceFile = new File(getClass().getResource("/xml-spliterator.xml").getFile());
+        //1. test counting an iterable
+        XmlSpliterator xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "child");
+        //equivalent to the Guava Iterators.size
+        long size = sequential(xmlSpliterator).count();
+        assertThat(size, is(4L));
+
+        //2. test building a list from an iterable, then extracting element-text from the list
+        xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "subchild");
+        List<Element> matches = sequential(xmlSpliterator).collect(Collectors.toList());
+        assertThat(matches.size(), is(4));
+        final List<String> valueList = matches.stream().map(new ElementTextExtractor()).collect(Collectors.toList());
+        assertThat(valueList, containsInAnyOrder("abc", "def", "ghi", "klm"));
+
+        //3. test iterating and extracting text from the iterable directly
+        xmlSpliterator = new XmlSpliterator(new StreamSource(sourceFile), "subchild");
+        valueList.clear();
+        xmlSpliterator.forEach(e -> valueList.add(e.getTextTrim()));
+        assertThat(valueList, containsInAnyOrder("abc", "def", "ghi", "klm"));
+    }
+
     @Test
     public void shouldHandleEmptyXmlDoc() throws Exception {
         XmlSpliterator xmlSpliterator = new XmlSpliterator(new StreamSource(new StringReader(emptyXmlDoc)), "child");
@@ -66,9 +94,14 @@ public class XmlSpliteratorTest {
         assertThat(size, is(0));
     }
 
+    private List<String> toXmlContentList(XmlSpliterator xmlSpliterator) {
+        return StreamSupport.stream(Spliterators.spliteratorUnknownSize(xmlSpliterator.iterator(), Spliterator.ORDERED), false)
+            .map(input -> new ElementTextExtractor().apply(input)).collect(Collectors.toList());
+    }
 
-    private static final class ElementTextExtractor implements Function<Element, String> {
-        @Override public String apply(Element input) {
+    private static final class ElementTextExtractor implements Function<Element, String>, java.util.function.Function<Element, String> {
+        @Override
+        public String apply(Element input) {
             return input.getTextTrim();
         }
     }
